    - Added a way to create calcium sulfate. Im a merciful dictator, after all.
    - Added RTG's, a small but expensive building that can take radioactive materials and turn them into power. Has a small neighbour bonus.
    - Added mixing tanks, a new 6x6 building that handles making things like sludges and slurries. Enjoy revamping your factory, suckers!

  Changes:
    - Changed CRT's recipe to take CRT framing and screens.
    - Moved around the items needed in CRT/Oscilliscopes/RCU's.
    - Made Oscilliscopes slightly cheaper. Slightly.
    - Changed polonium reactors to give off pollution.
    - Changed molten-inators to start from 10 pollution/m, and gets to 6p/m at tier 3.
    - Changed calcite filtering to take 4 seconds instead of 1.3.
    - Also changed calcite filtering to occsionally give off sea salt.
    - Changed modules to take 4 rubber instead of 2.
    - Nerfed stone walls resistances to 2% acid, 10% and 65% fire.
    - Changed electric mining drills 2 to be just upgraded tier 1's, without the increased mining area.
    - Deleted zirconium ore. It literally did nothing, and zirconium is already convulted as is with its uses.
    - Made crucibles need 3 zironica, compared to 2.
    - Made crucibles need 4 aluminium plates, compared to 2.
    - Changed the amount of acidic water you get from leeching ferrum/patina from 15 to 12.5, and made it a probability-based amount.
    - Changed the amount of polonium you can get from lead-solder, from 0-2, to 0-2 with a 25% chance. I still want to see people attempt to power their base with it.
    - Changed any plates that come after P-TM science, to take 6.4s instead of the usual 3.2s.

  Fixes:
    - Fixed the science pack item names captilisation.
    - (Mostly) Fixed the Factoriopedia being a mess. Never not name your recipes after their outputs.
    - Fixed empty reactor cells taking 0.5s to craft, and not 20s. Sucks to suck, huh?
