@@ -20,7 +20,7 @@ data:extend({
     },
     results =
     {
-      PM.product("pm-nickel-ore", 2),
+      PM.product("pm-nickel-chunk", 2),
       PM.product("pm-palladium-ore", 2),
       PM.product_range_chance("pm-ferrum", 1, 3, 0.5)
     }
@@ -43,7 +43,7 @@ data:extend({
     },
     results =
     {
-      PM.product("pm-nickel-ore", 2),
+      PM.product("pm-nickel-chunk", 2),
       PM.product("pm-palladium-ore", 2),
       PM.product_chance("pm-ferrum", 1, 0.5),
       PM.product_chance("pm-flux-container", 1, 0.66)
