@@ -264,7 +264,7 @@ data:extend({
     results =
     {
       PM.product_range("pm-cobalt-ore", 7, 12),
-      PM.product_range("pm-arsenic-ore", 6, 8),
+      PM.product_range("pm-arsenic-ore", 4, 7),
       PM.product_range("sulfur", 7, 12),
       PM.product_range_chance("pm-ferrum", 2, 4, 0.12)
     }
