@@ -12,6 +12,8 @@ Date: 2024-12-08
     - Added a way to create calcium sulfate. Im a merciful dictator, after all.
     - Added RTG's, a small but expensive building that can take radioactive materials and turn them into power. Has a small neighbour bonus.
     - Added mixing tanks, a new 6x6 building that handles making things like sludges and slurries. Enjoy revamping your factory, suckers!
+    - Reworked oil residuals to not be as shit as it currently was, it now gives off two fluids that can be seperated into what you'd get from residual chunks.
+    - I still despise oil.
 
   Changes:
     - Changed CRT's recipe to take CRT framing and screens.
@@ -30,6 +32,7 @@ Date: 2024-12-08
     - Changed the amount of acidic water you get from leeching ferrum/patina from 15 to 12.5, and made it a probability-based amount.
     - Changed the amount of polonium you can get from lead-solder, from 0-2, to 0-2 with a 25% chance. I still want to see people attempt to power their base with it.
     - Changed any plates that come after P-TM science, to take 6.4s instead of the usual 3.2s.
+    - Buffed platinum powder seperation to give 1-3 ore, instead of 1-2.
 
   Fixes:
     - Fixed the science pack item names captilisation.
